[package]
name = "rls"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10.0"
log = { version = "0.4.19", features = ["release_max_level_warn"] }
thiserror = "1.0"
users = "0.11.0"
crossterm = "0.26"
